[workspace]
members = ["opengov-curves", "pallets"]

[workspace.package]
authors = ["noandrea"]
description = "A tool to format numbers with precision and copy them to the clipboard"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.dependencies]
pallet-referenda = "31.0.0"
sp-runtime = "34.0.0"
sp-io = "33.0.0"
frame-support = "31.0.0"
getrandom = { version = "0.2", features = ["js"] }
